--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sivadass/react-expense-manager.git"
+    "url": "https://github.com/sivadass/react-meeting-room"
   },
   "author": "Sivadass N",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.16.2",
-    "moment": "^2.19.3",
-    "moment-mini": "^2.18.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.2",
@@ -33,17 +32,17 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
